--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,9 @@ layout: default
           {% if page.image %}
             <div class="container">
               <img src="{{ page.image }}" alt="{{ page.caption }}">
+              {% if page.caption %}
+                <p align="right">{{ page.caption }}</p>
+              {% endif %}
             </div>
             <br>
           {% endif %}
