--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,13 @@ layout: default
     <div class="column is-half">
       <div class="container">
 
+        {% if site.description %}
+            <div class="container">
+              {{ site.description }}
+            </div>
+            <hr>
+        {% endif %}
+
         {% for p in site.posts %}
 
           <div class="content">
