--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,33 +4,48 @@ layout: default
 
 <section class="section" id="posts">
   <div class="columns">
-    <div class="column is-quarter">
+    <div class="column">
 
     </div>
-    <div class="column is-half">
+    <div class="column is-one-third">
       <div class="container">
-
-        {% if site.description %}
-            <div class="container">
-              {{ site.description }}
-            </div>
-            <hr>
-        {% endif %}
 
         {% for p in site.posts %}
 
-          <div class="content">
-            <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
-            <br>
-            <p class="subtitle is-6">{{ p.date | date: "%b %-d, %Y" }}</p>
-            <hr>
-          </div>
+          {% assign loopindex = forloop.index | modulo: 2 %}
+          {% if loopindex == 1 %}
+            <div class="content">
+              <a class="title is-5 is-pulled-right" href="{{ p.url }}">{{ p.title }}</a>
+              <br>
+              <!-- <a class="subtitle is-6 is-pulled-right" href="{{ p.url }}">{{ p.date | date: "%b %-d, %Y" }}</a> -->
+              <br>
+            </div>
+          {% endif %}
 
         {% endfor %}
 
       </div>
     </div>
-    <div class="column is-quarter">
+    <div class="column is-one-third">
+      <div class="container">
+
+        {% for p in site.posts %}
+
+        {% assign loopindex = forloop.index | modulo: 2 %}
+        {% if loopindex == 0 %}
+          <div class="content">
+            <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
+            <br>
+            <!-- <p class="subtitle is-6">{{ p.date | date: "%b %-d, %Y" }}</p> -->
+            <br>
+          </div>
+        {% endif %}
+
+        {% endfor %}
+
+      </div>
+    </div>
+    <div class="column">
 
     </div>
   </div>
