--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,7 @@ layout: default
           {% endif %}
 
           <p class="title">{{ page.title }}</p>
+          <p class="subtitle">{{ page.date | date: "%b %-d, %Y" }}</p>
           <p class="subtitle">by {{ page.author }}</p>
 
           <div class="post-content">
