trying a new style

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section class="section" id="posts">
-  <div class="columns">
+  <div class="columns is-mobile">
     <div class="column">
 
     </div>
