--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="{{ "/assets/css/mystyles.css" | relative_url }}">
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144214802-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-144214802-3');
+    </script>
   </head>
 
   <header>
