--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>{{ site.title }}</title>
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="{{ "/assets/css/mystyles.css" | relative_url }}">
+
+    <!-- Netlify Identity -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144214802-3"></script>
     <script>
@@ -18,9 +23,12 @@
 
       gtag('config', 'UA-144214802-3');
     </script>
+
   </head>
 
   <header>
+
+    <!-- Title -->
     <nav class="level">
       <div class="level-item has-text-centered">
         <div class="container">
@@ -30,16 +38,28 @@
       </div>
     </nav>
 
+    <!-- Little horizontal line -->
     <hr style="width: 10%; margin: 1em auto;">
+
   </header>
 
   <body>
-    <section class='container'>
-      <main>
-        {{ content }}
-      </main>
-    </section>
 
+    <!-- Content, centered with gaps on either side of the page -->
+    <main>
+      <div class="columns is-mobile">
+        <!-- Filler column -->
+        <div class="column"></div>
+          <!-- Center content column -->
+          <div class="column is-half">
+            {{ content }}
+          </div>
+          <!-- Fillter column -->
+          <div class="column"></div>
+        </div>
+    </main>
+
+    <!-- Netlify Indentity Admin Redirect -->
     <script>
       if (window.netlifyIdentity) {
         window.netlifyIdentity.on("init", user => {
