--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,20 +2,26 @@
 layout: default
 ---
 
-<section class="section" id="posts">
-  <div class="container">
+<div class="container">
 
-    {% for p in site.posts %}
+  {% for p in site.posts %}
 
-        <!-- Post title, centered on page -->
-        <div class="container" style="text-align:center">
-          <a class="title is-5 is-centered" href="{{ p.url }}">{{ p.title }}</a>
-        </div>
+      <!-- Post title, centered on page -->
+      <div class="container" style="text-align:center">
+        <a class="title is-5 is-centered" href="{{ p.url }}">{{ p.title }}</a>
+      </div>
 
-        <!-- Small space -->
-        <br>
+      <!-- Small space -->
+      <br>
 
-    {% endfor %}
+  {% endfor %}
 
-  </div>
-</section>
+</div>
+
+<hr style="width: 10%; margin: 1em auto;">
+
+<br>
+
+<div class="container" style="text-align:center">
+  <a class="title is-6 is-centered" href="/about/">About</a>
+</div>
