--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
         <!-- Filler column -->
         <div class="column"></div>
           <!-- Center content column -->
-          <div class="column is-half">
+          <div class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
             {{ content }}
           </div>
           <!-- Fillter column -->
