--- a/_sass/mystyles.scss
+++ b/_sass/mystyles.scss
@@ -21,3 +21,4 @@ $title-weight: $weight-normal;
 @import "sass/elements/container.sass";
 @import "sass/elements/title.sass";
 @import "sass/layout/section.sass";
+@import "sass/components/level.sass";
