--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,19 +31,26 @@
 
     <!-- Title -->
     <nav class="level">
-      <div class="level-item has-text-centered">
-        <div class="container">
+      <div class="level-left">
+          <a class="title is-3" href="/">{{ site.title }}</a>
+      </div>
+
+      <div class="level-right">
+          <a class="title is-3" href="/">{{ site.title }}</a>
+      </div>
+      <!-- <div class="level-item has-text-centered"> -->
+        <!-- <div class="container"> -->
 
           <!-- Site title -->
-          <a class="title is-3" href="/">{{ site.title }}</a>
+          <!-- <a class="title is-3" href="/">{{ site.title }}</a> -->
 
           <!-- Little horizontal line -->
-          <hr style="width: 10%; margin: 1em auto;">
+          <!-- <hr style="width: 10%; margin: 1em auto;"> -->
 
-          <br>
+          <!-- <br> -->
 
-        </div>
-      </div>
+        <!-- </div> -->
+      <!-- </div> -->
     </nav>
 
 
