--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,10 +31,10 @@ layout: default
 
 </div>
 
-<hr style="width: 10%; margin: 1em auto;">
+<!-- <hr style="width: 10%; margin: 1em auto;"> -->
 
-<br>
+<!-- <br> -->
 
-<div class="container" style="text-align:center">
+<!-- <div class="container" style="text-align:center">
   <a class="title is-6 is-centered" href="/about/">About</a>
-</div>
+</div> -->
