--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,30 +28,40 @@
 
   <header>
     <br>
+    <div class="columns is-mobile">
+      <!-- Filler column -->
+      <div class="column"></div>
+        <!-- Center content column -->
+        <div class="column is-four-fifths-mobile is-two-thirds-tablet is-one-third-desktop is-one-third-widescreen is-one-third-fullhd">
+          <!-- Title -->
+          <nav class="level">
+            <div class="level-left">
+                <a class="title is-3" href="/">{{ site.title }}</a>
+            </div>
 
-    <!-- Title -->
-    <nav class="level">
-      <div class="level-left">
-          <a class="title is-3" href="/">{{ site.title }}</a>
-      </div>
+            <div class="level-right">
+              <a class="title is-5 is-centered" href="/about/">About</a>
+            </div>
+            <!-- <div class="level-item has-text-centered"> -->
+              <!-- <div class="container"> -->
 
-      <div class="level-right">
-          <a class="title is-3" href="/">{{ site.title }}</a>
-      </div>
-      <!-- <div class="level-item has-text-centered"> -->
-        <!-- <div class="container"> -->
+                <!-- Site title -->
+                <!-- <a class="title is-3" href="/">{{ site.title }}</a> -->
 
-          <!-- Site title -->
-          <!-- <a class="title is-3" href="/">{{ site.title }}</a> -->
 
-          <!-- Little horizontal line -->
-          <!-- <hr style="width: 10%; margin: 1em auto;"> -->
+              <!-- </div> -->
+            <!-- </div> -->
+          </nav>
 
           <!-- <br> -->
 
-        <!-- </div> -->
-      <!-- </div> -->
-    </nav>
+          <!-- Little horizontal line -->
+          <hr style="width: 100%; margin: 1em auto;">
+        </div>
+        <!-- Fillter column -->
+        <div class="column"></div>
+      </div>
+
 
 
 
