--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <title>{{ site.title }}</title>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/mystyles.css">
+    <link rel="stylesheet" href="/assets/css/mystyles.css">
 
     <!-- Netlify Identity -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
