--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,11 @@
 
   <head>
     <meta charset="utf-8">
+
+    <meta name="description" content="The unapologetic ramblings of a layman.">
+    <meta name="keywords" content="Christianity,Apologetics,Philosophy,Culture">
+    <meta name="author" content="Chris Carter">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>{{ site.title }}</title>
