--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
       <!-- Post title, centered on page -->
       <div class="container" style="text-align:center">
         <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
-        <p class="">{{ p.date | date: "%B %-d, %Y" }}</p>
+        <p>{{ p.date | date: "%B %-d, %Y" }}</p>
       </div>
 
       <!-- Small space -->
