--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 {% endif %}
 
 <div class="container" style="text-align:center">
-  <p class="title">{{ page.title }}</p>
+  <p class="title is-4">{{ page.title }}</p>
   <p class="subtitle">{{ page.date | date: "%b %-d, %Y" }}</p>
   <p class="subtitle">by {{ page.author }}</p>
 </div>
