--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,115 +2,16 @@
 
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
+  <head> {% include head.html %} </head>
 
-    <meta name="description" content="The unapologetic ramblings of a layman.">
-    <meta name="keywords" content="Christianity,Apologetics,Philosophy,Culture">
-    <meta name="author" content="Chris Carter">
+  <header> {% include header.html %} </header>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <body> {% include body.html %} </body>
 
-    <title>{{ site.title }}</title>
+  <!-- <footer class="footer">
+    <div class="content">
 
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="/assets/css/mystyles.css">
-
-    <!-- Netlify Identity -->
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144214802-3"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-144214802-3');
-    </script>
-
-  </head>
-
-  <header>
-    <br>
-    <div class="container">
-      <div class="columns is-mobile">
-
-        <!-- Filler column -->
-        <div class="column"></div>
-
-        <!-- Center content column -->
-        <div class="column is-four-fifths-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
-
-          <!-- Title -->
-          <nav class="level">
-            <div class="level-left">
-              <div class="level-item">
-                <a class="title is-3 is-white" href="/">{{ site.title }}</a>
-              </div>
-            </div>
-
-            <div class="level-right">
-              <div class="level-item">
-                <a class="title is-6 is-centered" href="/articles/">Articles</a>
-              </div>
-
-              <div class="level-item">
-                <a class="title is-6 is-centered" href="/blog/">Blog</a>
-              </div>
-
-              <div class="level-item">
-                <a class="title is-6 is-centered" href="/about/">About</a>
-              </div>
-            </div>
-          </nav>
-        </div>
-
-        <!-- Filler column -->
-        <div class="column"></div>
-      </div>
     </div>
-
-    <br>
-
-  </header>
-
-  <br>
-
-  <body>
-
-    <!-- Content, centered with gaps on either side of the page -->
-    <main>
-      <div class="columns is-mobile">
-        <!-- Filler column -->
-        <div class="column"></div>
-          <!-- Center content column -->
-          <div class="column is-four-fifths-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
-            {{ content }}
-          </div>
-          <!-- Fillter column -->
-          <div class="column"></div>
-        </div>
-    </main>
-
-    <!-- Netlify Indentity Admin Redirect -->
-    <script>
-      if (window.netlifyIdentity) {
-        window.netlifyIdentity.on("init", user => {
-          if (!user) {
-            window.netlifyIdentity.on("login", () => {
-              document.location.href = "/admin/";
-            });
-          }
-        });
-      }
-    </script>
-
-    <!-- bootstrap js -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-  </body>
+  </footer> -->
 
 </html>
