--- a/_includes/body.html
+++ b/_includes/body.html
@@ -5,7 +5,7 @@
     <!-- Filler column -->
     <div class="column"></div>
       <!-- Center content column -->
-      <div class="column is-four-fifths-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
+      <div class="column is-four-fifths-mobile is-two-thirds-tablet is-two-thirds-desktop is-two-thirds-widescreen is-two-thirds-fullhd">
         {{ content }}
       </div>
       <!-- Fillter column -->
