--- a/_sass/mystyles.scss
+++ b/_sass/mystyles.scss
@@ -20,6 +20,7 @@ $title-weight: $weight-normal;
 @import "sass/grid/columns.sass";
 @import "sass/elements/container.sass";
 @import "sass/elements/title.sass";
+@import "sass/elements/image.sass";
 @import "sass/layout/section.sass";
 @import "sass/layout/footer.sass";
 @import "sass/components/level.sass";
