--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
     <div class="column"></div>
 
     <!-- Center content column -->
-    <div class="column is-four-fifths-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
+    <div class="column is-four-fifths-mobile is-two-thirds-tablet is-three-fifths-desktop is-three-fifths-widescreen is-three-fifths-fullhd">
 
       <nav class="level">
 
@@ -35,7 +35,7 @@
         </div>
 
       </nav>
-      
+
     </div>
 
     <!-- Filler column -->
