--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -5,7 +5,7 @@ layout: default
 {% for p in site.categories.articles %}
 
     <!-- Post title, centered on page -->
-    <div class="container" style="text-align:center">
+    <div class="container">
       <a class="title is-6" href="{{ p.url }}">{{ p.title }}</a>
       <p class="">{{ p.date | date: "%B %-d, %Y" }}</p>
     </div>
