--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,49 +2,41 @@
 layout: default
 ---
 
+<section class="section">
+  <a class="title is-5" href="/blog/">Blog</a>
 
-<div class="columns">
-  <div class="column">
-    <a class="title is-5" href="/blog/">Blog</a>
+  <hr>
 
-    <hr>
+  {% for p in site.categories.blog limit: 3 %}
 
-    {% for p in site.categories.blog limit: 5 %}
+      <!-- Post title, centered on page -->
+      <div class="container">
+        <a class="title is-6" href="{{ p.url }}">{{ p.title }}</a>
+        <p class="">{{ p.date | date: "%B %-d, %Y" }}</p>
+      </div>
 
-        <!-- Post title, centered on page -->
-        <div class="container">
-          <a class="title is-6" href="{{ p.url }}">{{ p.title }}</a>
-          <p class="">{{ p.date | date: "%B %-d, %Y" }}</p>
-        </div>
+      <!-- Small space -->
+      <br>
 
-        <!-- Small space -->
-        <br>
-
-    {% endfor %}
-  </div>
-
-  <div class="column">
-    <a class="title is-5" href="/articles/">Articles</a>
-
-    <hr>
-
-    {% for p in site.categories.articles limit: 5 %}
-
-        <!-- Post title, centered on page -->
-        <div class="container">
-          <a class="title is-6" href="{{ p.url }}">{{ p.title }}</a>
-          <p class="">{{ p.date | date: "%B %-d, %Y" }}</p>
-        </div>
-
-        <!-- Small space -->
-        <br>
-
-    {% endfor %}
-
-  </div>
-</div>
+  {% endfor %}
+</section>
 
 
+<section class="section">
+  <a class="title is-5" href="/articles/">Articles</a>
 
-<br>
-<br>
+  <hr>
+
+  {% for p in site.categories.articles limit: 3 %}
+
+      <!-- Post title, centered on page -->
+      <div class="container">
+        <a class="title is-6" href="{{ p.url }}">{{ p.title }}</a>
+        <p class="">{{ p.date | date: "%B %-d, %Y" }}</p>
+      </div>
+
+      <!-- Small space -->
+      <br>
+
+  {% endfor %}
+</section>
