--- a/_sass/mystyles.scss
+++ b/_sass/mystyles.scss
@@ -25,4 +25,5 @@ $title-weight: $weight-normal;
 @import "sass/layout/section.sass";
 @import "sass/layout/footer.sass";
 @import "sass/components/level.sass";
-@import "sass/components/card.sass"
+@import "sass/components/card.sass";
+@import "sass/components/navbar.sass";
