--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,22 +3,37 @@ layout: default
 ---
 
 <section class="section">
-  <a class="title is-5" href="/blog/">Blog</a>
+  <a class="title is-5" href="/blog/">Blog Posts</a>
 
   <hr>
 
   {% for p in site.categories.blog limit: 3 %}
 
-      <!-- Post title, centered on page -->
-      <div class="container">
-        <a class="title is-6" href="{{ p.url }}">{{ p.title }}</a>
-        <p class="">{{ p.date | date: "%B %-d, %Y" }}</p>
+      <div class="columns">
+        {% if p.image %}
+          <div class="column is-one-third">
+            <figure class = "figure">
+              <img src="{{ p.image }}" alt="">
+            </figure>
+          </div>
+        {% endif %}
+
+        <div class="column">
+          <!-- Post title, centered on page -->
+          <div class="container">
+            <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
+            <p>{{ p.date | date: "%B %-d, %Y" }}</p>
+            <br>
+            <p>{{ p.content | strip_html | strip_newlines | truncate: 200 }}</p>
+          </div>
+        </div>
       </div>
 
       <!-- Small space -->
       <br>
 
   {% endfor %}
+
 </section>
 
 
@@ -29,14 +44,28 @@ layout: default
 
   {% for p in site.categories.articles limit: 3 %}
 
-      <!-- Post title, centered on page -->
-      <div class="container">
-        <a class="title is-6" href="{{ p.url }}">{{ p.title }}</a>
-        <p class="">{{ p.date | date: "%B %-d, %Y" }}</p>
-      </div>
+    <div class="columns">
+      {% if p.image %}
+        <div class="column is-one-third">
+          <figure class = "figure">
+            <img src="{{ p.image }}" alt="">
+          </figure>
+        </div>
+      {% endif %}
 
-      <!-- Small space -->
-      <br>
+      <div class="column">
+        <!-- Post title, centered on page -->
+        <div class="container">
+          <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
+          <p>{{ p.date | date: "%B %-d, %Y" }}</p>
+          <br>
+          <p>{{ p.content | strip_html | strip_newlines | truncate: 200 }}</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Small space -->
+    <br>
 
   {% endfor %}
 </section>
