--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,8 +26,7 @@
 
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-end">
-          <a class="navbar-item" href="/articles/">Articles</a>
-          <a class="navbar-item" href="/blog/">Blog</a>
+          <a class="navbar-item" href="/blog/">Blog Archive</a>
           <a class="navbar-item" href="/about/">About</a>
         </div>
       </div>
@@ -39,6 +38,7 @@
   <!-- Filler column -->
   <div class="column"></div>
 
+  <!-- Navbar Burger -->
   <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', () => {
 
