--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,12 +2,28 @@
 layout: default
 ---
 
+<br>
+
 {% for p in site.categories.blog %}
 
-    <!-- Post title, centered on page -->
-    <div class="container">
-      <a class="title is-6" href="{{ p.url }}">{{ p.title }}</a>
-      <p class="">{{ p.date | date: "%B %-d, %Y" }}</p>
+    <div class="columns">
+      {% if p.image and p.image != '' %}
+        <div class="column is-one-third">
+          <figure class = "figure">
+            <img src="{{ p.image }}" alt="">
+          </figure>
+        </div>
+      {% endif %}
+
+      <div class="column">
+        <!-- Post title, centered on page -->
+        <div class="container">
+          <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
+          <p>{{ p.date | date: "%B %-d, %Y" }}</p>
+          <br>
+          <p>{{ p.content | strip_html | strip_newlines | truncate: 200 }}</p>
+        </div>
+      </div>
     </div>
 
     <!-- Small space -->
