--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
 
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-end">
-          <a class="navbar-item" href="/blog/">Blog Archive</a>
+          <a class="navbar-item" href="/blog/">Archive</a>
           <a class="navbar-item" href="/about/">About</a>
         </div>
       </div>
