--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ layout: default
 
       <div class="column">
 
-        <!-- Post title, centered on page -->
+        <!-- Post title -->
         <div class="container">
           <a class="title is-5" href="{{ p.url }}">{{ p.title }}</a>
           <p>{{ p.date | date: "%B %-d, %Y" }}</p>
