format updates and remove post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <!-- Metadata -->
 <meta charset="utf-8">
 
-<meta name="description" content="The unapologetic ramblings of a layman.">
+<meta name="description" content="The unapologetic proclamations of a layman.">
 <meta name="keywords" content="Christianity,Apologetics,Philosophy,Culture">
 <meta name="author" content="Chris Carter">
 
