--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,8 +15,8 @@ layout: default
 
 <div class="container" style="text-align:center">
   <p class="title is-4">{{ page.title }}</p>
-  <p class="subtitle">{{ page.date | date: "%B %-d, %Y" }}</p>
-  <p class="subtitle">{{ page.author }}</p>
+  <p class="subtitle is-6">{{ page.author }} &middot; {{ page.date | date: "%B %-d, %Y" }}</p>
+  <!-- <p class="subtitle is-6"></p> -->
 </div>
 
 <br>
