--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,15 @@
       <div class="navbar-brand">
 
         <div class="container">
-          <a class="title is-3" href="/">{{ site.title }}</a>
+          <div class="container">
+            <a class="title is-3" href="/">{{ site.title }}</a>
+          </div>
+
+          <div class="container">
+            <p class="subtitle is-6">Proclamations of a layman.</p>
+          </div>
         </div>
+
 
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
           <span aria-hidden="true"></span>
@@ -68,3 +75,5 @@
   </script>
 
 </div>
+
+<br>
