--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,6 +35,7 @@
         <div class="navbar-end">
           <a class="navbar-item" href="/blog/">Archive</a>
           <a class="navbar-item" href="/about/">About</a>
+          <a class="navbar-item" href="/contact/">Contact</a>
         </div>
       </div>
 
