--- a/_sass/mystyles.scss
+++ b/_sass/mystyles.scss
@@ -22,8 +22,11 @@ $title-weight: $weight-normal;
 @import "sass/elements/container.sass";
 @import "sass/elements/title.sass";
 @import "sass/elements/image.sass";
+@import "sass/elements/button.sass";
+@import "sass/elements/icon.sass";
 @import "sass/layout/section.sass";
 @import "sass/layout/footer.sass";
 @import "sass/components/level.sass";
 @import "sass/components/card.sass";
 @import "sass/components/navbar.sass";
+@import "sass/form/_all.sass";
