--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,3 +26,6 @@
 
   gtag('config', 'UA-144214802-3');
 </script>
+
+<!-- Fontawesome -->
+<script src="https://kit.fontawesome.com/6df62b7563.js" crossorigin="anonymous"></script>
