--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
 
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-end">
-          <a class="navbar-item" href="/blog/">Archive</a>
+          <a class="navbar-item" href="/archive/">Archive</a>
           <a class="navbar-item" href="/about/">About</a>
           <a class="navbar-item" href="/contact/">Contact</a>
         </div>
