--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -37,7 +37,7 @@ layout: default
     </div>
   </div>
 
-  <div class="field is-grouped">
+  <div class="field">
     <div class="control">
       <button type="submit" class="button is-link">Submit</button>
     </div>
