--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -16,7 +16,7 @@ layout: default
   <div class="field">
     <label class="label">Email</label>
     <div class="control has-icons-left has-icons-right">
-      <input class="input" type="email" placeholder="Email address" value="hello@">
+      <input class="input" type="email" name="email" placeholder="Email address">
       <span class="icon is-small is-left">
         <i class="fas fa-envelope"></i>
       </span>
