--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+{{ content }}
+
+<br>
+
 <form name="contact" method="POST" data-netlify="true">
   <div class="field">
     <label class="label">Name</label>
