small style changes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,3 +29,6 @@
 
 <!-- Fontawesome -->
 <script src="https://kit.fontawesome.com/6df62b7563.js" crossorigin="anonymous"></script>
+
+<!-- Favicon -->
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
