--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,21 @@
 layout: default
 ---
 
+<div class="container" style="text-align:center">
+  {{ site.quote }}
+</div>
+
+<br>
+<br>
+
+
+<div class="container" style="text-align:center">
+  <p class="title is-5">Recent Posts</p>
+  &middot;&middot;&middot;
+</div>
+
+<br>
+
 {% for p in site.categories.blog limit: 4 %}
 
     <div class="columns">
