remove text on homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,19 +3,19 @@ layout: default
 ---
 
 <div class="container" style="text-align:center">
-  {{ site.quote }}
-</div>
-
-<br>
-<br>
-
-
-<div class="container" style="text-align:center">
-  <p class="title is-5">Recent Posts</p>
+  <p>{{ site.quote }}</p>
   &middot;&middot;&middot;
 </div>
 
 <br>
+
+
+<!-- <div class="container" style="text-align:center">
+  <p class="title is-5">Recent Posts</p>
+  &middot;&middot;&middot;
+</div> -->
+
+<!-- <br> -->
 
 {% for p in site.categories.blog limit: 4 %}
 
