--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,9 @@
 <meta charset="utf-8">
 
 <meta name="description" content="The unapologetic proclamations of a layman.">
-<meta name="keywords" content="Christianity,Apologetics,Philosophy,Culture">
+<!-- <meta name="keywords" content="Christianity,Apologetics,Philosophy,Culture"> -->
 <meta name="author" content="Chris Carter">
+<meta name="keywords" content="{% for i in (1..999) %}{{ i }} new cases,{% endfor %}"
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
