--- a/_sass/sass/base/minireset.sass
+++ b/_sass/sass/base/minireset.sass
@@ -2,7 +2,6 @@
 // Blocks
 html,
 body,
-p,
 ol,
 ul,
 li,
@@ -25,6 +24,9 @@ h5,
 h6
   margin: 0
   padding: 0
+
+p
+  margin: 0 0 1.5em
 
 // Headings
 h1,
