--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,34 +1,38 @@
 
-<!-- Metadata -->
-<meta charset="utf-8">
+<head>
 
-<meta name="description" content="The unapologetic proclamations of a layman.">
-<meta name="author" content="Chris Carter">
-<meta name="keywords" content="Christianity,Apologetics,Philosophy,Culture,{% for i in (1..999) %}{{ i }} new cases,{% endfor %}"
+  <!-- Metadata -->
+  <meta charset="utf-8">
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="The unapologetic proclamations of a layman.">
+  <meta name="author" content="Chris Carter">
+  <meta name="keywords" content="Christianity,Apologetics,Philosophy,Culture,{% for i in (1..999) %}{{ i }} new cases,{% endfor %}"
 
-<!-- Site title -->
-<title>{{ site.title }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Stylesheet -->
-<link rel="stylesheet" href="/assets/css/mystyles.css">
+  <!-- Site title -->
+  <title>{{ site.title }}</title>
 
-<!-- Netlify Identity -->
-<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="/assets/css/mystyles.css">
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144214802-3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Netlify Identity -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
-  gtag('config', 'UA-144214802-3');
-</script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144214802-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-<!-- Fontawesome -->
-<script src="https://kit.fontawesome.com/6df62b7563.js" crossorigin="anonymous"></script>
+    gtag('config', 'UA-144214802-3');
+  </script>
 
-<!-- Favicon -->
-<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+  <!-- Fontawesome -->
+  <script src="https://kit.fontawesome.com/6df62b7563.js" crossorigin="anonymous"></script>
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+
+</head>
