--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,84 +1,84 @@
 
-<br>
+<header>
 
-<div class="columns is-mobile">
+  <br>
 
-  <!-- Filler column -->
-  <div class="column"></div>
+  <div class="columns is-mobile">
 
-  <!-- Center content column -->
-  <div class="column is-four-fifths-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
+    <!-- Filler column -->
+    <div class="column"></div>
 
-    <nav class="navbar" role="navigation" aria-label="main navigation">
+    <!-- Center content column -->
+    <div class="column is-four-fifths-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
 
-      <div class="navbar-brand">
+      <nav class="navbar" role="navigation" aria-label="main navigation">
 
-        <div class="container">
+        <div class="navbar-brand">
+
           <div class="container">
-            <a class="title is-3" href="/">{{ site.title }}</a>
+            <div class="container">
+              <a class="title is-3" href="/">{{ site.title }}</a>
+            </div>
           </div>
 
-          <div class="container">
-            <p class="subtitle is-6">{{ site.tagline }}</p>
+
+          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+          </a>
+        </div>
+
+        <div id="navbarBasicExample" class="navbar-menu">
+          <div class="navbar-end">
+            {% for page in site.data.pages %}
+              {% if page.external %}
+                <a class="navbar-item" target="_blank" href="{{ page.link }}">{{ page.name }}</a>
+              {% else %}
+                <a class="navbar-item" href="{{ page.link }}">{{ page.name }}</a>
+              {% endif %}
+            {% endfor %}
           </div>
         </div>
 
+      </nav>
 
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-        </a>
-      </div>
+    </div>
 
-      <div id="navbarBasicExample" class="navbar-menu">
-        <div class="navbar-end">
-          {% for page in site.data.pages %}
-            {% if page.external %}
-              <a class="navbar-item" target="_blank" href="{{ page.link }}">{{ page.name }}</a>
-            {% else %}
-              <a class="navbar-item" href="{{ page.link }}">{{ page.name }}</a>
-            {% endif %}
-          {% endfor %}
-        </div>
-      </div>
+    <!-- Filler column -->
+    <div class="column"></div>
 
-    </nav>
+    <!-- Navbar Burger -->
+    <script type="text/javascript">
+      document.addEventListener('DOMContentLoaded', () => {
+
+        // Get all "navbar-burger" elements
+        const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+        // Check if there are any navbar burgers
+        if ($navbarBurgers.length > 0) {
+
+          // Add a click event on each of them
+          $navbarBurgers.forEach( el => {
+            el.addEventListener('click', () => {
+
+              // Get the target from the "data-target" attribute
+              const target = el.dataset.target;
+              const $target = document.getElementById(target);
+
+              // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+              el.classList.toggle('is-active');
+              $target.classList.toggle('is-active');
+
+            });
+          });
+        }
+
+      });
+    </script>
 
   </div>
 
-  <!-- Filler column -->
-  <div class="column"></div>
+  <br>
 
-  <!-- Navbar Burger -->
-  <script type="text/javascript">
-    document.addEventListener('DOMContentLoaded', () => {
-
-      // Get all "navbar-burger" elements
-      const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
-
-      // Check if there are any navbar burgers
-      if ($navbarBurgers.length > 0) {
-
-        // Add a click event on each of them
-        $navbarBurgers.forEach( el => {
-          el.addEventListener('click', () => {
-
-            // Get the target from the "data-target" attribute
-            const target = el.dataset.target;
-            const $target = document.getElementById(target);
-
-            // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
-            el.classList.toggle('is-active');
-            $target.classList.toggle('is-active');
-
-          });
-        });
-      }
-
-    });
-  </script>
-
-</div>
-
-<br>
+</header>
