--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,10 @@
 
 <html lang="en">
 
-  <head> {% include head.html %} </head>
+  {% include head.html %}
 
-  <header> {% include header.html %} </header>
+  {% include header.html %}
 
-  <body> {% include body.html %} </body>
+  {% include body.html %}
 
 </html>
