--- a/_includes/body.html
+++ b/_includes/body.html
@@ -1,30 +1,34 @@
 
-<!-- Content, centered with gaps on either side of the page -->
-<main>
-  <div class="columns is-mobile">
-  <!-- Filler column -->
-  <div class="column"></div>
-    <!-- Center content column -->
-    <div class="column is-four-fifths-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
-      {{ content }}
-    </div>
-    <!-- Fillter column -->
+<body>
+
+  <!-- Content, centered with gaps on either side of the page -->
+  <main>
+    <div class="columns is-mobile">
+    <!-- Filler column -->
     <div class="column"></div>
-  </div>
+      <!-- Center content column -->
+      <div class="column is-four-fifths-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
+        {{ content }}
+      </div>
+      <!-- Fillter column -->
+      <div class="column"></div>
+    </div>
 
-  <br>
-  
-</main>
+    <br>
 
-<!-- Netlify Indentity Admin Redirect -->
-<script>
-  if (window.netlifyIdentity) {
-    window.netlifyIdentity.on("init", user => {
-      if (!user) {
-        window.netlifyIdentity.on("login", () => {
-          document.location.href = "/admin/";
-        });
-      }
-    });
-  }
-</script>
+  </main>
+
+  <!-- Netlify Indentity Admin Redirect -->
+  <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
+
+</body>
