--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
 
 <br>
 
-{% for p in site.categories.blog limit: 4 %}
+{% for p in site.posts limit: 4 %}
 
     <div class="columns">
 
