--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,9 @@ layout: default
 
   <div class="column is-one-quarter">
 
-    {% for tag in site.tags %}
+    {% assign sorted_tags = site.tags | sort %}
+
+    {% for tag in sorted_tags %}
 
       {% assign t = tag | first %}
       {% assign posts = tag | last %}
