--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@ layout: default
   {% endfor %}
   </div>
 
-  <div class="column is-one-fifth">
+  <div class="column is-one-third">
 
     {% assign sorted_tags = site.tags | sort %}
 
