--- a/_includes/body.html
+++ b/_includes/body.html
@@ -9,7 +9,7 @@
       <div class="column"></div>
 
       <!-- Center content column -->
-      <div class="column is-four-fifths-mobile is-two-thirds-tablet is-half-desktop is-half-widescreen is-half-fullhd">
+      <div class="column is-four-fifths-mobile is-two-thirds-tablet is-two-thirds-desktop is-two-thirds-widescreen is-two-thirds-fullhd">
         {{ content }}
       </div>
 
