--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,8 @@ layout: default
 
 <div class="columns">
   <div class="column">
-  {% for p in site.posts limit: 5 %}
+
+  {% for p in site.posts limit: 3 %}
 
       <div class="columns">
 
@@ -51,14 +52,16 @@ layout: default
       </p>
 
       {% for post in posts %}
-        <a href={{ post.url }}>
-          <p style="margin: 0 1em 0.2em">
-            {{ post.title }}
-          </p>
-        </a>
-      {% endfor %}
 
-      <br>
+        <p class="is-size-7" style="margin: 0 1em 0">
+          <a href={{ post.url }}>
+            {{ post.title }}
+          </a>
+          &middot
+          {{ post.date | date: "%Y-%m-%d" }}
+        </p>
+
+      {% endfor %}
 
     {% endfor %}
 
